<resources>
	<string name="app_name">CameMode</string>
    <string name="app_name_dev">【Dev】CameMode</string>
	<string name="bottom_nav_title_home">ホーム</string>
	<string name="bottom_nav_title_search">見つける</string>
	<string name="bottom_nav_title_mypage">マイページ</string>
	<string name="tutorial_pager_1">このアプリは、カメラマンとモデルの「ポートレート撮影したい」という思いを叶えるためのアプリです。</string>
	<string name="tutorial_pager_2">①　撮影したいモデル、撮影してもらいたいカメラマンを探します。</string>
	<string name="tutorial_pager_3">②　条件に合う人が見つかったら各SNS上でやり取りをし、実際に撮影をします。</string>
	<string name="tutorial_pager_4">迷惑行為などを避け、楽しくポートレイト活動をしていきましょう！\n\n下のボタンをタップ！</string>
	<string name="search_simple_button">かんたん検索</string>
	<string name="search_detail_buttin">詳細検索</string>
	<string name="search_simple_radio_camera">カメラマンをさがす</string>
	<string name="search_simple_radio_model">モデルをさがす</string>
	<string name="no_data_dogeza">🙇‍</string>
	<string name="no_data_text">検索結果がありませんでした…\nほかの条件で検索してみましょう！</string>
	<string name="no_data_button">検索画面へ戻る</string>
    <string name="search_button_text">見つける！</string>
	<string name="mypage_mydata_button">マイデータ登録</string>
	<string name="mypage_faq_button">よくある質問</string>
	<string name="mypage_app_term_button">利用規約</string>
	<string name="category_role_camera">カメラマン</string>
	<string name="category_role_model">モデル</string>
	<string name="category_role_camera_model">カメラマン/モデル</string>
	<string-array name="region_item_add">
		<item>北海道</item>
		<item>東北</item>
		<item>関東</item>
		<item>北陸</item>
		<item>中部</item>
		<item>近畿</item>
		<item>四国</item>
		<item>中国</item>
		<item>九州</item>
		<item>沖縄</item>
	</string-array>
	<string-array name="sex_item">
		<item>未選択</item>
		<item>男性</item>
		<item>女性</item>
	</string-array>
	<string-array name="age_item">
		<item>未選択</item>
		<item>10代</item>
		<item>20代</item>
		<item>30代</item>
		<item>40代</item>
		<item>50代</item>
		<item>60代以上</item>
	</string-array>
	<string name="region_title">地域</string>
	<string name="region_hokkaido">北海道</string>
	<string name="region_tohoku">東北</string>
	<string name="region_kanto">関東</string>
	<string name="region_hokuriku">北陸</string>
	<string name="region_chubu">中部</string>
	<string name="region_kinki">近畿</string>
	<string name="region_shikoku">四国</string>
	<string name="region_chugoku">中国</string>
	<string name="region_kyusyu">九州</string>
	<string name="region_okinawa">沖縄</string>
	<string name="region_not_select">未選択</string>
	<string name="age_title">年代</string>
	<string name="age_unselected">未選択</string>
	<string name="age_10">10代</string>
	<string name="age_20">20代</string>
	<string name="age_30">30代</string>
	<string name="age_40">40代</string>
	<string name="age_50">50代</string>
	<string name="age_60_adove">60代以上</string>
	<string name="charge_title">無償・有償</string>
	<string name="charge_not">無償</string>
	<string name="charge">有償</string>
	<string name="charge_both">どちらでも</string>
	<string name="sex_title">性別</string>
	<string name="sex_not_select">未選択</string>
	<string name="sex_man">男性</string>
	<string name="sex_woman">女性</string>
	<string name="photo_image_title">撮影イメージ</string>
	<string name="twitter_url">https://twitter.com/</string>
	<string name="instagram_url">https://www.instagram.com/</string>
	<string name="app_term_contents"><b>利用規約</b>\n
        この利用規約（以下、「本規約」といいます。）は、本サービスの利用条件を定めるものです。\n本規約は、本サービスを利用するすべてのユーザーに適用されます。\n
        \n<b>本規約への同意</b>\n
        ユーザーは、本サービスを利用することによって、本規約に有効かつ取り消し不能な同意をしたものとみなされます。本規約に同意しないユーザーは、本サービスをご利用いただけません。\n

        \n<b>利用登録</b>\n
        本サービスの利用を希望する方は、本規約に同意の上、当社の定める方法によって利用登録を申請し、当社がこれを承認することによって、本サービスの利用登録をすることができます。\n

        \n<b>登録拒否</b>\n
        当社は、以下のいずれかの事由があると判断した場合、利用登録の申請を承認しないことがあります。当社は登録拒否の理由について一切の開示義務を負いません。\n
        \n
        ・虚偽の事項を届け出た場合\n

        ・本規約に違反したことがある者からの申請である場合\n

        ・その他、当社が利用登録を相当でないと判断した場合\n

        \n<b>未成年による利用</b>\n
        ユーザーが未成年である場合には、法定代理人の同意を得た上で、本サービスを利用してください。\n
        法定代理人の同意を得ずに本サービスのご利用を開始したユーザーが成年に達した場合、未成年者であった間の利用行為を追認したものとみなします。\n

        \n<b>ログイン情報の管理</b>\n
        ユーザーは、自己の責任において、本サービスのログイン情報を適切に管理するものとします。\nユーザーは、いかなる場合にも、ログイン情報を第三者に譲渡または貸与し、もしくは第三者と共用することはできません。\n
        当社は、ログイン情報が第三者によって使用されたことによって生じた損害につき、当社に故意又は重大な過失がある場合を除き、一切の責任を負いません。\n

        \n<b>コンテンツのご利用</b>\n
        当社は、ユーザーに対し、本サービスが提供する文章、画像、動画、音声、音楽、ソフトウェア、プログラム、コードその他のコンテンツについて、本サービスの利用範囲内における私的な利用を許諾します。\n
        有償コンテンツについては、当社が定める利用料金の支払が完了した場合に、本サービスの利用範囲内における私的な利用を許諾します。\n
        これは、譲渡及び再許諾できない、非独占的な利用権です。\n
        この範囲を超えて本サービスが提供するコンテンツを利用することは一切禁止します。\n
        理由の如何を問わず、ユーザーが本サービスを利用する権利を失った場合、本サービスの一切のコンテンツの利用ができなくなることを、ユーザーは予め承諾するものとします。\n

        \n<b>ユーザーの投稿</b>\n
        ユーザーは、ユーザーの投稿に含まれる情報を送信することについて適法な権利を有していること、及びユーザーの投稿が第三者の知的財産権（著作権、特許権、実用新案権、商標権、意匠権（それらの権利を取得し、又はそれらの権利につき登録等を出願する権利を含みます。）又はアイデア、ノウハウ等をいい、以下同様とします。）、所有権その他の権利を侵害していないことについて、当社に対し表明し、保証するものとします。\n
        ユーザーの投稿に関する著作権は、ユーザー自身に留保されます。\n
        当社はユーザーの投稿に関して著作権を取得することはありません。\n
        ただし、当社は、本サービスの提供、維持、改善又は本サービスのプロモーションに必要な範囲において、無償、無期限かつ地域非限定で、ユーザーの投稿を複製、翻案、自動公衆送信及びそのために必要な送信可能化をすることができるものとします。\n
        この場合、ユーザーは、当社および当社から権利を承継し又は許諾されたものに対し著作者人格権を行使しないものとします。\n
        ユーザーは自己の責任において投稿のバックアップを行わなければなりません。\n
        当社は、ユーザーの投稿のバックアップを行う義務を負わないものとします。\n
        ユーザーは、以下のいずれかに該当する情報を投稿してはいけません。\n
        \n
        ・当社又は第三者の知的財産権、肖像権、プライバシー、名誉、その他の権利又は利益を侵害する情報\n
        ・ユーザーを特定可能な個人情報等を含む情報（ただし、利用登録に必要な場合等当社が求めた場合、その他当社が認めた場合を除きます。）\n
        ・わいせつな表現を含む情報\n
        ・異性、同性を問わず、面識のない第三者とのわいせつな行為等を目的とする情報\n
        ・自殺、自傷行為を誘引、勧誘又は助長する表現を含む情報\n
        ・薬物·危険ドラッグの売買に関する情報又は薬物危険ドラッグの不適切な利用を助長する表現を含む情報\n
        ・宗教的行為、宗教団体、政治的活動、政治団体の宣伝又は広告に関する情報\n
        ・ネットワークビジネス関連の勧誘等に関する情報\n
        ・未成年者に悪影響を及ぼすおそれのある情報\n
        ・残虐な表現その他他人に不快感を与えるおそれのある情報\n
        ・その他当社が不適切と判断する情報\n

        \n<b>広告の表示</b>\n
        当社は、本サービスに当社または第三者の広告を掲載することができるものとします。\n

        \n<b>禁止事項</b>\n
        ユーザーは、本サービスの利用にあたり、以下の行為をしてはなりません。\n
        \n
        ・法令、裁判所の判決、決定若しくは命令、又は法令上拘束力のある行政措置に違反する行為又はこれらを助長する行為\n
        ・犯罪行為に関連する行為\n
        ・当社や第三者の知的財産権を侵害する行為\n
        ・当社や第三者の肖像権、プライバシー、名誉、その他の権利又は利益を侵害する行為\n
        ・当社や第三者のサーバーまたはネットワークに過度の負担をかけたり、その正常な作動を妨害する行為\n
        ・当社のサービスの運営を妨害するおそれのある行為\n
        ・不正アクセスをし、またはこれを試みる行為\n
        ・逆アセンブル、逆コンパイル、リバースエンジニアリング等によって本サービスのソースコードを解析する行為\n
        ・本アプリに接続しているシステムに権限なく不正にアクセスし又は当社設備に蓄積された情報を不正に書き換え若しくは消去する行為\n
        ・本サービスのウェブサイトやソフトウェアを複製、送信、譲渡、貸与又は改変する行為\n
        ・本サービス上のアカウント又はコンテンツを第三者に有償で貸与、譲渡、売買等をする行為\n
        ・本サービスによって得られた情報を商業的に利用する行為\n
        ・当社が意図しない方法によって本サービスに関連して利益を得ることを目的とする行為\n
        ・当社が許諾しない本サービス上での宣伝、広告、勧誘、または営業行為\n
        ・他のユーザーに関する個人情報等を収集または蓄積する行為\n
        ・違法、不正又は不当な目的を持って本サービスを利用する行為\n
        ・本サービスの他のユーザーまたはその他の第三者に不利益、損害、不快感を与える行為\n
        ・他のユーザーに成りすます行為\n
        ・他のユーザーのアカウントを利用する行為\n
        ・反社会的勢力に対して直接または間接に利益を供与する行為\n
        ・公序良俗に違反する行為\n
        ・歩行中、車両運転中、その他本サービスの利用が不適切な状況又は態様において本サービスを利用する行為\n
        ・その他、当社が不適切と判断する行為\n

        \n<b>利用制限</b>\n
        当社は、ユーザーが以下のいずれかに該当する場合には、事前の通知なく、ユーザーに対して、本サービスの全部もしくは一部の利用を制限し、またはユーザーとしての登録を抹消することができるものとします。\n
        当社は、本条に基づき当社が行った行為によりユーザーに生じた損害について、一切の責任を負いません。\n
        \n
        ・本規約のいずれかの条項に違反した場合\n
        ・登録事項に虚偽の事実があることが判明した場合\n
        ・金銭債務の不履行があった場合\n
        ・当社からの連絡に対し、相当の期間が経過しても返答がない場合\n
        ・最終のご利用日から相当期間、本サービスのご利用がない場合\n
        ・反社会的勢力等であるか、反社会的勢力等との何らかの交流若しくは関与を行っていると当社が判断した場合\n
        ・その他、当社が本サービスの利用を適当でないと判断した場合\n

        \n<b>本サービスの提供の停止</b>\n
        当社は、以下のいずれかの事由があると判断した場合、ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止または中断することができるものとします。\n
        当社は、この場合にユーザーまたは第三者が被ったいかなる不利益または損害についても、一切の責任を負わないものとします。
        \n
        ・本サービスにかかるコンピュータシステムの保守点検または更新を行う場合\n
        ・地震、落雷、火災、停電、天災またはウィルスの蔓延などの不可抗力により、本サービスの提供が困難となった場合\n
        ・コンピュータまたは通信回線等が事故により停止した場合\n
        ・その他、当社が本サービスの提供が困難と判断した場合\n

        \n<b>退会</b>\n
        ユーザーは、当社の定める手続により、利用登録を抹消し、本サービスから退会できるものとします\n

        \n<b>保証の否認</b>\n
        当社は、本サービスや本サービスが提供するコンテンツに、システムバグや第三者の権利侵害が含まれないことを保証するものではありません。\n
        また、安全性、信頼性、正確性、完全性、有効性、特定の目的への適合性を保証するものでもありません。\n

        \n<b>免責</b>\n
        当社は、本サービスに関してユーザーに生じたあらゆる損害について一切の責任を負いません。\n
        ただし、本サービスに関する当社とユーザーとの間の契約（本規約を含みます。）が消費者契約法に定める消費者契約となる場合、この免責規定は適用されません。\n
        消費者契約に該当する場合であっても、当社は、当社の過失（重過失を除きます。）によってユーザーに生じた損害のうち特別の事情から生じた損害（当社またはユーザーが損害発生につき予見し、または予見し得た場合を含みます。）について、一切の責任を負いません。\n
        ユーザーと他のユーザーまたは第三者との間において生じたトラブルについても一切責任を負いません。\n
        当社は、本サービスに関してユーザーが被った損害に付き、過去3ヶ月間にユーザーが当社に支払った利用料金を超えて賠償する責任を負わないものとします。\n

        \n<b>サービス内容の変更</b>\n
        当社は、ユーザーに通知することなく、本サービスの内容を変更したり、本サービスの提供を中止、終了することができるものとします。\n
        当社は、これによってユーザーに生じた損害について一切の責任を負いません。\n

        \n<b>利用規約の変更</b>\n
        当社は、ユーザーに通知することなく、いつでも本規約を変更することができるものとします。\n
        変更後の本規約は、当社ウェブサイトに掲示された時点から効力を生じるものとします。\n
        本規約の変更後、本サービスの利用を継続したユーザーは、変更後の本規約に同意したものとみなします。\n

        \n<b>個人情報の取扱い</b>\n
        本サービスの利用によって取得するユーザーの個人情報については、当社のプライバシーポリシーに従い適切に取り扱うものとします。\n

        \n<b>通知または連絡</b>\n
        ユーザーと当社との間の通知または連絡は、当社の定める方法によって行うものとします。\n
        当社は、ユーザーから、当社が別途定める方式に従った変更届け出がない限り、現在登録されている連絡先が有効なものとみなして当該連絡先へ通知または連絡を行い、これらは、発信時にユーザーへ到達したものとみなします。\n

        \n<b>権利義務の譲渡</b>\n
        ユーザーは、当社の書面による事前の承諾なく、利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し、または担保に供することはできません。\n

        \n<b>事業譲渡</b>\n
        当社は本サービスにかかる事業を他社に事業譲渡（事業譲渡、会社分割その他事業が移転するあらゆる場合を含みます。）した場合には、当該事業譲渡に伴い利用契約上の地位、本規約に基づく権利及び義務並びにユーザーの情報を当該事業譲渡の譲受人に譲渡することができるものとします。\n
        ユーザーは、かかる譲渡につき予め同意したものとみなします。\n

        \n<b>適用関係</b>\n
        本規約は、ユーザーと当社との間の本サービスの利用に関わる一切の関係に適用されるものとします。\n
        当社は本サービスに関し、本規約のほか、ご利用にあたってのルールを定めることがあります。\n
        これらのルールは、その名称のいかんに関わらず、本規約の一部を構成するものとします。\n
        本規約がこれらのルールと矛盾する場合には、これらのルールが優先して適用されるものとします。\n

        \n<b>分離可能性</b>\n
        本規約のいずれかの条項又はその一部が無効又は執行不能と判断された場合であっても、当該判断は他の部分に影響を及ぼさず、本規約の残りの部分は、引き続き有効かつ執行力を有するものとします。\n

        \n<b>準拠法・裁判管轄</b>\n
        本規約の解釈にあたっては、日本法を準拠法とします。\n
        本サービスに関して紛争が生じた場合には、当社の本店所在地を管轄する地方裁判所を専属的合意管轄とします。\n

        \n\n
        【2020年08月29日】制定\n
        【2020年08月29日】更新\n
    </string>
	<string name="faq_question_01">登録するには、どうしたらいいの？</string>
	<string name="faq_question_02">このアプリで、メッセージを送り合うことはできないの？</string>
	<string name="faq_question_03">登録情報を削除したいけど、どうしたらいい？</string>
	<string name="faq_question_04">登録情報の引き継ぎをしたいんだけど、できる？</string>
	<string name="faq_question_05">登録情報の取り扱いが不安……</string>
	<string name="faq_question_06">Instagramには対応していないの？</string>
	<string name="faq_question_last">〜上記以外のお問い合わせ〜</string>
	<string name="faq_answer_01">マイページ画面の『マイデータ登録』から登録することができます。</string>
	<string name="faq_answer_02">メッセージ機能は、現在では検討中です。\n今後のアップデートにご期待ください！</string>
	<string name="faq_answer_03">データの削除方法は、現在未定のため検討中です。</string>
	<string name="faq_answer_04">データの引き継ぎは、現在未定のため検討中です。</string>
	<string name="faq_answer_05">詳しくは、マイページ画面の『利用規約』をご確認ください。\nこのアプリはサードパーティ（他社）製のサービスを利用して、データを管理しています。</string>
	<string name="faq_answer_06">今後のアップデートで対応する予定です。\nご期待ください！</string>
	<string name="faq_answer_last">お手数ですが、こちら(yutaroapp@gmail.com)までご連絡いただけると幸いです。\n個人運営のため、返信に3日ほどかかる場合がございます。\n予めご了承ください。</string>
	<string name="regist_01_category_role_exp">あなたの専門を選択ください。</string>
	<string name="regist_02_display_name_exp">アプリ内での表示名を入力ください。</string>
	<string name="regist_02_twitter_id_exp">連携するTwitterのIDを入力ください。</string>
	<string name="regist_02_instagram_id_exp">連携するInstagramのIDを入力ください。</string>
	<string name="regist_03_exp">下の各項目を入力ください。</string>
	<string name="regist_04_photo_image">撮影時のイメージなど、ご自由に入力ください。</string>
	<string name="regist_alert_dialog_confirm_title">登録確認</string>
	<string name="regist_alert_dialog_confirm_message">この情報で登録してよろしいですか？</string>
	<string name="regist_sns_id_empty_error">どちらかのIDを入力してください！</string>
	<string name="regist_display_name_empty_error">表示名を入力してください！</string>
	<string name="regist_photo_image_empty_error">表示名を入力してください！</string>
	<string name="regist_photo_image_over_error">文字数制限を超えています！</string>
	<string name="twitter_id_rules">abcdefghijklmnopqrstuvwxyz1234567890_ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>