<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#990000"
             tools:context=".Fragment.MyPage.MyPageFragment">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hello_blank_fragment" android:id="@+id/textView"/>

        <Button
                android:id="@+id/my_data"
                android:text="My Data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/faq"/>

        <Button
                android:id="@+id/faq"
                android:text="@string/mypage_faq_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/app_term"
                android:layout_marginBottom="8dp"/>

        <Button
                android:id="@+id/app_term"
                android:text="@string/mypage_app_term_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView"/>
</androidx.constraintlayout.widget.ConstraintLayout>