<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragment.MyPage.MyDataEditFragment">

    <TextView
            android:text="希望カテゴリ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
            android:id="@+id/category_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
                android:id="@+id/category_role_cameraman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_role_camera"/>

        <RadioButton
                android:id="@+id/category_role_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_role_model"/>

        <RadioButton
                android:id="@+id/category_role_none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/category_role_camera_model"/>
    </RadioGroup>

    <TextView
            android:text="表示名"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/category_role"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <TextView
            android:text="TwitterアカウントID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/editText"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    <TextView
            android:text="有償・無償"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/editText2"/>

    <RadioGroup
            android:id="@+id/which_charge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_editor_absoluteX="8dp">

        <RadioButton
                android:id="@+id/charge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="有償"/>

        <RadioButton
                android:id="@+id/no_charge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="無償"/>

        <RadioButton
                android:id="@+id/either"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="どちらでも"/>
    </RadioGroup>

    <TextView
            android:text="地域"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/which_charge"/>
</androidx.constraintlayout.widget.ConstraintLayout>