<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Fragment.MyPage.MyDataRegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        <TextView
                android:id="@+id/category_role_label"
                android:text="希望カテゴリ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <RadioGroup
                android:id="@+id/category_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                app:layout_constraintTop_toBottomOf="@+id/category_role_label">

            <RadioButton
                    android:id="@+id/category_role_cameraman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_role_camera"/>

            <RadioButton
                    android:id="@+id/category_role_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_role_model"/>

            <RadioButton
                    android:id="@+id/category_role_none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/category_role_camera_model"/>
        </RadioGroup>

        <TextView
                android:id="@+id/display_name_label"
                android:text="表示名"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="8dp"
                app:layout_constraintTop_toBottomOf="@+id/category_role"/>
        <EditText
                android:id="@+id/display_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toBottomOf="@+id/display_name_label"/>

        <TextView
                android:id="@+id/twitter_id_label"
                android:text="TwitterアカウントID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="8dp"
                app:layout_constraintTop_toBottomOf="@+id/display_name_input"/>
        <EditText
                android:id="@+id/twitter_id_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/twitter_id_rules"
                android:inputType="textEmailAddress"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toBottomOf="@+id/twitter_id_label"/>

        <TextView
                android:id="@+id/which_charge_label"
                android:text="有償・無償"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="8dp"
                app:layout_constraintTop_toBottomOf="@+id/twitter_id_input"/>

        <RadioGroup
                android:id="@+id/which_charge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/which_charge_label"
                tools:layout_editor_absoluteX="8dp">

            <RadioButton
                    android:id="@+id/charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="有償"/>

            <RadioButton
                    android:id="@+id/no_charge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="無償"/>

            <RadioButton
                    android:id="@+id/either"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="どちらでも"/>
        </RadioGroup>

        <TextView
                android:id="@+id/region_label"
                android:text="地域"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toBottomOf="@+id/which_charge"/>

        <Spinner
                android:id="@+id/region_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/region_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                android:entries="@array/region_item_add"/>

        <TextView
                android:id="@+id/sex_label"
                android:text="性別"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toBottomOf="@+id/region_spinner"
                android:layout_marginTop="8dp"/>

        <Spinner
                android:id="@+id/sex_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/sex_item"
                app:layout_constraintTop_toBottomOf="@+id/sex_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.1"/>

        <TextView
                android:id="@+id/age_label"
                android:text="年代"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/sex_spinner"/>

        <Spinner
                android:id="@+id/age_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/age_item"
                app:layout_constraintTop_toBottomOf="@+id/age_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.1"/>

        <TextView
                android:id="@+id/photo_image_label"
                android:text="撮影イメージ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="8dp"
                app:layout_constraintTop_toBottomOf="@+id/age_spinner"/>

        <androidx.core.widget.NestedScrollView
                android:id="@+id/nest"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@+id/photo_image_label">

            <EditText
                    android:id="@+id/photo_image_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@color/colorEditTextBackground"
                    android:scrollbars="vertical"
                    android:maxLength="200"/>
        </androidx.core.widget.NestedScrollView>

        <TextView
                android:id="@+id/photo_image_text_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:gravity="right"
                android:text="0/200"
                app:layout_constraintTop_toBottomOf="@+id/nest"
                tools:layout_editor_absoluteX="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/regist_button"/>

        <ImageButton
                android:id="@+id/regist_button"
                android:src="@drawable/ic_person_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
